chaos/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: crylic
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: root
          image: postgres
          imagePullPolicy: "IfNotPresent"
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: db
status:
  loadBalancer: {}
